Updated Russian translate

--- a/locales/ru/LC_MESSAGES/OnlineLibrary.po
+++ b/locales/ru/LC_MESSAGES/OnlineLibrary.po
@@ -79,48 +79,95 @@ msgstr ""
 msgid "About"
 msgstr ""
 
+#: manager\manager.go:148
+msgid "Account \"%v\" already exists"
+msgstr ""
+
 #: gui\mainwindow.go:45
 msgid "Accounts"
-msgstr ""
+msgstr "Учётные записи"
 
 #: gui\mainwindow.go:49
 msgid "Add account"
-msgstr ""
+msgstr "Добавить учётную запись"
 
 #: gui\mainwindow.go:147
 msgid "Add bookmark"
-msgstr ""
+msgstr "Добавить закладку"
 
 #: gui\mainwindow.go:411
 msgid "Adding a new account"
+msgstr "Добавление новой учётной записи"
+
+#: manager\manager.go:386
+msgid "Adding a new bookmark"
+msgstr "Добавление новой закладки"
+
+#: manager\manager.go:175
+msgid ""
+"Are you sure you want to delete the account \"%v\"?\n"
+"All saved bookmarks of all books in this library will also be deleted.\n"
+"This action cannot be undone."
+msgstr ""
+
+#: manager\manager.go:414
+msgid "Are you sure you want to delete the bookmark \"%v\"?"
+msgstr ""
+
+#: manager\manager.go:445
+msgid "Audio labels support: %v"
 msgstr ""
 
 #: gui\mainwindow.go:293
 msgid "Audio output device"
+msgstr "Устройство вывода звука"
+
+#: manager\manager.go:443
+msgid "Back command support: %v"
 msgstr ""
 
 #: gui\mainwindow.go:194
 msgid "Beginning of the fragment"
 msgstr ""
 
-#: gui\mainwindow.go:132
-msgid "Book information"
+#: manager\manager.go:795
+msgid "Book description not available"
 msgstr ""
+
+#: manager\manager.go:676
+msgid "Book downloading"
+msgstr ""
+
+#: gui\mainwindow.go:132 manager\manager.go:232
+msgid "Book information"
+msgstr "Информация о книге"
 
 #: gui\mainwindow.go:165
 msgid "Book navigation"
 msgstr ""
 
+#: manager\manager.go:747
+msgid "Book successfully downloaded"
+msgstr ""
+
+#: manager\manager.go:386
+msgid "Bookmark name:"
+msgstr "Имя закладки:"
+
 #: gui\mainwindow.go:143
 msgid "Bookmarks"
-msgstr ""
+msgstr "Закладки"
 
 #: gui\mainwindow.go:62
 msgid "Bookshelf"
-msgstr ""
+msgstr "Книжная полка"
 
-#: gui\mainwindow.go:459 gui\mainwindow.go:516
+#: gui\mainwindow.go:459 gui\mainwindow.go:516 gui\progress.go:39
 msgid "Cancel"
+msgstr "Отмена"
+
+#: manager\manager.go:455
+msgid "Changes will be reflected upon restarting the program"
 msgstr ""
 
 #: gui\mainwindow.go:276
@@ -131,21 +178,63 @@ msgstr ""
 msgid "Decrease volume"
 msgstr ""
 
+#: gui\menubar.go:121
+msgid "Default"
+msgstr ""
+
 #: gui\mainwindow.go:96
 msgid "Delete account"
 msgstr ""
 
+#: manager\manager.go:415
+msgid "Deleting a bookmark"
+msgstr ""
+
+#: manager\manager.go:176
+msgid "Deleting an account"
+msgstr ""
+
 #: gui\mainwindow.go:417 gui\mainwindow.go:419
 msgid "Displayed name:"
-msgstr ""
+msgstr "Отображаемое имя:"
 
 #: gui\mainwindow.go:114
 msgid "Download book"
 msgstr ""
 
+#: manager\manager.go:743
+msgid "Download canceled by user"
+msgstr ""
+
+#: manager\manager.go:675
+msgid ""
+"Downloading \"%v\"\n"
+"Speed: %d KB/s"
+msgstr ""
+
+#: manager\manager.go:311
+msgid "Enter fragment number:"
+msgstr "Введите номер фрагмента:"
+
+#: manager\manager.go:332
+msgid "Enter fragment position:"
+msgstr "Введите позицию фрагмента:"
+
+#: manager\manager.go:361
+msgid "Enter the timer value in minutes:"
+msgstr ""
+
+#: manager\manager.go:569
+msgid "Entering text"
+msgstr "Ввод текста"
+
+#: manager\manager.go:148 manager\manager.go:745 manager\manager.go:797
+msgid "Error"
+msgstr "Ошибка"
+
 #: gui\mainwindow.go:101
 msgid "Exit"
-msgstr ""
+msgstr "Выход"
 
 #: gui\mainwindow.go:168
 msgid "First fragment"
@@ -153,17 +242,17 @@ msgstr ""
 
 #: gui\statusbar.go:33
 msgid "Fragment %d of %d"
-msgstr ""
+msgstr "Фрагмент %d из %d"
 
 #: gui\mainwindow.go:191
 msgid "Fragment navigation"
 msgstr ""
 
-#: gui\mainwindow.go:173
+#: gui\mainwindow.go:173 manager\manager.go:311
 msgid "Go to fragment"
 msgstr ""
 
-#: gui\mainwindow.go:199
+#: gui\mainwindow.go:199 manager\manager.go:332
 msgid "Go to position"
 msgstr ""
 
@@ -177,15 +266,19 @@ msgstr ""
 
 #: gui\mainwindow.go:297
 msgid "Language"
-msgstr ""
+msgstr "Язык"
 
-#: gui\mainwindow.go:91
+#: gui\mainwindow.go:91 manager\manager.go:447
 msgid "Library information"
-msgstr ""
+msgstr "Информация о библиотеке"
 
-#: gui\mainwindow.go:86
+#: manager\manager.go:593
+msgid "List of books is empty"
+msgstr "Список книг пуст"
+
+#: gui\mainwindow.go:86 manager\providers.go:122
 msgid "Local books"
-msgstr ""
+msgstr "Локальные книги"
 
 #: gui\mainwindow.go:307
 msgid "Logging level"
@@ -193,10 +286,22 @@ msgstr ""
 
 #: gui\mainwindow.go:56
 msgid "Main menu"
+msgstr "Главное меню"
+
+#: gui\menubar.go:70
+msgid "Move"
+msgstr ""
+
+#: manager\manager.go:442
+msgid "Name: %v (%v)"
+msgstr ""
+
+#: manager\manager.go:791
+msgid "Network error. Please check your internet connection"
 msgstr ""
 
 #: gui\mainwindow.go:68
-msgid "New receipts"
+msgid "New books"
 msgstr ""
 
 #: gui\mainwindow.go:178
@@ -205,10 +310,22 @@ msgstr ""
 
 #: gui\mainwindow.go:448 gui\mainwindow.go:508
 msgid "OK"
+msgstr "OK"
+
+#: manager\manager.go:793
+msgid "Operation not supported"
 msgstr ""
 
 #: gui\mainwindow.go:435 gui\mainwindow.go:437
 msgid "Password:"
+msgstr "Пароль:"
+
+#: gui\menubar.go:147
+msgid "Pause timer (%d min.)"
+msgstr ""
+
+#: gui\menubar.go:145
+msgid "Pause timer (no)"
 msgstr ""
 
 #: gui\mainwindow.go:301
@@ -235,6 +352,10 @@ msgstr ""
 msgid "Remove book from bookshelf"
 msgstr ""
 
+#: gui\menubar.go:76
+msgid "Remove..."
+msgstr ""
+
 #: gui\mainwindow.go:281
 msgid "Reset speed"
 msgstr ""
@@ -243,12 +364,20 @@ msgstr ""
 msgid "Reset volume"
 msgstr ""
 
+#: manager\manager.go:444
+msgid "Search command support: %v"
+msgstr ""
+
 #: gui\mainwindow.go:74
 msgid "Search..."
-msgstr ""
+msgstr "Поиск..."
 
 #: gui\mainwindow.go:423 gui\mainwindow.go:425
 msgid "Server address:"
+msgstr "Адрес сервера:"
+
+#: manager\manager.go:361
+msgid "Setting the pause timer"
 msgstr ""
 
 #: gui\mainwindow.go:268
@@ -259,10 +388,28 @@ msgstr ""
 msgid "Stop"
 msgstr ""
 
+#: manager\manager.go:446
+msgid "Supported Optional Operations: %v"
+msgstr ""
+
 #: gui\mainwindow.go:429 gui\mainwindow.go:431
 msgid "User name:"
 msgstr ""
 
 #: gui\mainwindow.go:247
 msgid "Volume"
+msgstr ""
+
+#: manager\manager.go:193 manager\manager.go:205 manager\manager.go:455
+#: manager\manager.go:533 manager\manager.go:593 manager\manager.go:743
+#: manager\manager.go:747
+msgid "Warning"
+msgstr "Предупреждение"
+
+#: manager\manager.go:193
+msgid "\"%v\" is added to the bookshelf"
+msgstr ""
+
+#: manager\manager.go:205
+msgid "\"%v\" removed from bookshelf"
 msgstr ""
